--- a/Formal Project/bootstrap-3.3.5-dist/css/bootstrap.css
+++ b/Formal Project/bootstrap-3.3.5-dist/css/bootstrap.css
@@ -5,7 +5,7 @@
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-  font-family: sans-serif;
+  font-family: "Microsoft Yahei", Arial, Helvetica, sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -59,10 +59,7 @@ strong {
 dfn {
   font-style: italic;
 }
-h1 {
-  margin: .67em 0;
-  font-size: 2em;
-}
+
 mark {
   color: #000;
   background: #ff0;
@@ -1082,7 +1079,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Microsoft Yahei", Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -1172,7 +1169,7 @@ hr {
 [role="button"] {
   cursor: pointer;
 }
-h1,
+
 h2,
 h3,
 h4,
@@ -4032,6 +4029,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   display: block;
   padding: 10px 15px;
+  font-size: 1.2em;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
